# android_hardware_mediatek

./: CMakeLists.txt
combo_tool/combo_loader/: loader.c  loader.h
combo_tool/src/: stp_uart_launcher.c
debian/: README  README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  mtk-wifi-nvram.install  mtk-wifi-tools.install  mtk-wifi-tools.substvars  postinst
include/: portability.h  portability.h.gch
nvram-umi-x2/: AllFile  AllMap
nvram-umi-x2/APCFG/APRDCL/: Audio_AudEnh_Control_Opt  Audio_CompFlt  Audio_Sph  Audio_VOIP_Param  Audio_Wb_Sph  Audio_ver1_Vol_custom  CAMERA_SHADING  FILE_VER
nvram-umi-x2/APCFG/APRDEB/: BT_Addr  GPS  OMADM_USB  PSENSOR  WIFI
nvram-umi-x2/md/NVRAM/CALIBRAT/: HL10_000  HL11_000  HL13_000  HL14_000  HL17_000  HL1D_000  MP09_001  MPA8_000  MT05_002  MT06_002  MT07_002  MT08_002  MT09_002  MT0A_002  MT0B_002  MT0C_002  MT0D_002  MT0E_002  MT0H_002  MT0I_002  MT0J_004  MT0K_006  MT0P_003  MT0Q_002  MT0S_000  MT0T_000  MT0U_000  MT0V_000  MT1F_001  MT1V_000  UL10_000  UL11_000  UL12_000  UL15_000  UL18_000  UL1B_000  UL1C_000  UL1F_000  UL1I_000  UL1K_000  (+6 more)
nvram-umi-x2/md/NVRAM/NVD_CORE/: MT00B000
nvram-umi-x2/md/NVRAM/NVD_DATA/: MT03_000  MT04_000  MT0W_000  MT0X_000  MT0Y_002  MT0Z_004  MT17_005  MT18_000  MT1A_008  MT1B_000  MT2S_000  MT2U_000  MT2V_000  MT40_001  MT42_002  MT44_000  MT48_001  MT49_000  MT4A_001  MT4C_002  MT4D_001  MT67_004  MT68_000  MT6D_000  MT6G_003  MT6H_003  MT6K_004  MT6S_007  MT74_001  TR05_000  UM02_000  UM03_000  UM04_006  UM06_003
nvram-umi-x2/md/NVRAM/NVD_IMEI/: MP0B_001  ST6TB001
scripts/: mt6620_launcher.service  mt6620_loader.sh  mt6620_start_wireless.sh  wifi.service  wifi_enable.service  wifi_loader.service
